<resources>
    <string name="app_name">New Trainig Project</string>
    <string name="login_page">Login Page</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_username">Forget Username </string>
    <string name="forget_password">Forget Password …?</string>
    <string name="reg">Registration Form</string>
    <string name="email">Email</string>
    <string name="new_registration_form">New Registration form</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="singing">Singing</string>
    <string name="dancing">Dancing</string>
    <string name="drawing">Drawing</string>
    <string name="hobbies">Hobbies</string>
    <string name="agree_terms_and_conditions">Agree Terms and Conditions</string>
    <string name="sl_no">SlNo</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="view">View</string>
    <string name="add">ADD</string>
    <string name="select_fruit">Select fruit</string>
    <string name="select_places">Select places</string>
    <string name="flim_actors">Flim actors</string>
    <string name="favorate_film">Favorate film</string>
    <string name="favorate_flim">Favorate flim</string>
    <string name="favorite_film">Favorite Film</string>
</resources>