<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6B2C4"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="NAME"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPhNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="PhoneNumber"
        android:inputType="number" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Age"
        android:inputType="number" />

    <EditText
        android:id="@+id/etDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="DOB"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Gender" />

    <RadioGroup
        android:id="@+id/rbGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvHobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hobbies" />

    <CheckBox
        android:id="@+id/cbDrawing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawing" />

    <CheckBox
        android:id="@+id/cbDancing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dancing" />

    <CheckBox
        android:id="@+id/cbSinging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/reset" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_terms_and_conditions" />
</LinearLayout>