<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvSlNo"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sl_no"/>

    <TextView
        android:id="@+id/tvName"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvEmail"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/email" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/age" />


</LinearLayout>