<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sl_no"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="66dp" />

        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btView"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/view"/>
        <Button
            android:id="@+id/btActor"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="Add actor" />
    </LinearLayout>




</LinearLayout>





